--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@ckeditor/ckeditor5-editor-classic": "^16.0.0",
     "@ckeditor/ckeditor5-essentials": "^16.0.0",
     "@ckeditor/ckeditor5-heading": "^16.0.0",
+    "@ckeditor/ckeditor5-horizontal-line": "^16.0.0",
     "@ckeditor/ckeditor5-image": "^16.0.0",
     "@ckeditor/ckeditor5-indent": "^16.0.0",
     "@ckeditor/ckeditor5-link": "^16.0.0",
@@ -94,7 +95,5 @@
       "pre-commit": "lint-staged"
     }
   },
-  "dependencies": {
-    "@ckeditor/ckeditor5-horizontal-line": "^16.0.0"
-  }
+  "dependencies": {}
 }
